--- a/beauty.html
+++ b/beauty.html
@@ -120,7 +120,7 @@
     </section>
     <!-- end---here -->
   <!-- hair---treatment -->
-    <section class="Hair-care_Wrapper Treatment_Wrapper">
+    <section class="Hair-care_Wrapper Treatment_Wrapper" id="demo">
         <div class="container">
             <div class="HairCare-content">
                 <div class="hair-heading">
@@ -146,7 +146,7 @@
     </section>
     <!-- end--here -->
           <!-- Comfort  hair---treatment -->
-          <section class="Hair-care_Wrapper Treatment_Wrapper   Comfort_Wrapper   Vitality_Wrapper">
+          <section  class="Hair-care_Wrapper Treatment_Wrapper   Comfort_Wrapper   Vitality_Wrapper">
             <div class="container">
                 <div class="HairCare-content">
                     <div class="hair-heading">
@@ -178,7 +178,7 @@
         <!-- end--here -->
 
       <!-- Vitality hair---treatment -->
-      <section class="Hair-care_Wrapper Treatment_Wrapper  Vitality_Wrapper">
+      <section id="demo2" class="Hair-care_Wrapper Treatment_Wrapper  Vitality_Wrapper">
         <div class="container">
             <div class="HairCare-content">
                 <div class="hair-heading">
