--- a/index.html
+++ b/index.html
@@ -43,10 +43,18 @@
                     <div class="nav-item nav_cmn myHeader">
                         <ul class="Unorder_wrp">
                             <li class="skin">
-                                <a href="beauty.html" class="hvr-underline-from-left">
+                                <a href="#" class="hvr-underline-from-left">
                                 Skin
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
+                                 <!--drop--1st-->
+                                 <ul class="drop_down drop1">
+                                    <li class="list"><a href="#">Skin Treatment</a></li>
+                                    <li class="list"><a href="#">laser Treatment</a></li>
+                                    <li class="list"><a href="#">body Treatment</a></li>
+                                    <li class="list"><a href="#">cosmodermat Treatment</a></li> 
+                                </ul>
+                               <!-- end--here -->
                             <li class="slimming">
                                 <a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Slimming
@@ -55,93 +63,108 @@
                         </li>
                         <!-- drop--second -->
                         <div class="drop_down drop2">
-                            <div class="drop2_sub_wrp">
-                                <div class="list"> 
-                                    <div class="heading-btn">  
-                                        <h3>weight loss</h3> 
-                                        <span>+</span>
-                                    </div>
-                                    <ul class="weight_wrp" id="weight_wrp">
-                                        <li><a href="#">1Kg - Weight Loss</a></li>
-                                        <li><a href="#">Lipofit - 12 </a></li> 
+                            <div class="Child_drop2">
+                                <div class="sub-drop01 sub-cmn01">
+                                    <ul>
+                                        <li class="list1 list-cmn01 list-active"><a href="beauty.html#demo">weight loss</a></li>
+                                        <li class="list2 list-cmn01"><a href="beauty.html#demo2">weight gain</a></li>
+                                        <li class="list3 list-cmn01"><a href="#">BODY THERAPIES</a></li>
+                                        <li class="list4 list-cmn01"><a href="#">SPOT REDUCTION THERAPY</a></li>
+                                        <li class="list5 list-cmn01"><a href="#">SKIN FIRMING</a></li>
+                                        <li class="list6 list-cmn01"><a href="#">SPECIALISED THERAPIES</a></li>
+                                        <li class="list7 list-cmn01"><a href="#">WELLNESS TREATMENTS</a></li>
+                                        <li class="list8 list-cmn01"><a href="#">BIO ENEROYTHERAP</a></li>
+                                        <li class="list9 list-cmn01"><a href="#">VTRON CTS TREATMENTS</a></li>
                                     </ul>
                                 </div>
-                                <div class="list">
-                                    <h3>weight gain</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">1Kg - Weight gain</a></li>
-                                        <li><a href="#">duo therapy</a></li> 
-                                    </ul> 
+                                <div class="sub-drop02 sub-cmn01">
+                                    <div class="Sub_Hvr_wrp1 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <li><a href="#">1Kg - Weight Loss</a></li>
+                                            <li><a href="#">Lipofit - 12 </a></li> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp2 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <li><a href="#">1Kg - Weight gain</a></li>
+                                            <li><a href="#">duo therapy</a></li> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp3 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <li><a href="#">Full Body Therapy</a></li>
+                                            <li><a href="#">Premium Body Therapy</a></li> 
+                                            <li><a href="#">Herbal Anti - Cellulite Therapy</a></li> 
+                                            <li><a href="#">Manual Lymphatic Drainage Therapy</a></li> 
+                                            <li><a href="#">Bone Strengthening Therapy</a></li> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp4 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">Tummy Trim Therapy</a></li>
+                                                <li><a href="#">Arm Trim Therapy</a></li> 
+                                                <li><a href="#">Hip Trim Therapy</a></li>
+                                                <li><a href="#">Thigh Trim Therapy</a></li> 
+                                                <li><a href="#">Chest Trim Therapy</a></li>
+                                                <li><a href="#">Side Trim Therapy</a></li> 
+                                                <li><a href="#">Integrative Massage Therapy</a></li> 
+                                                <li><a href="#">G-5</a></li>
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp5 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">Body Firming / Contouring</a></li>  
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp6 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">Turboslim</a></li>
+                                                <li><a href="#">Waist & Tummy Trim Treatment</a></li>
+                                                <li><a href="#">Arm Trim Treatment</a></li>
+                                                <li><a href="#">Hip Trim Treatment</a></li> 
+                                                <li><a href="#">Thigh Trim Treatment</a></li>
+                                                <li><a href="#">Get Therapy</a></li> 
+                                                <li><a href="#">Ultraslim / Ultratrim</a></li>
+                                                <li><a href="#">SlimLite / Trimlite</a></li>  
+                                            </ul> 
+                                        </ul>
+                                    </div> 
+                                    <div class="Sub_Hvr_wrp7 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">Slimming Cum Core Muscle Strengthening Then</a></li>
+                                                <li><a href="#">Neuromuscular Therapy</a></li>
+                                                <li><a href="#">Analgesic T herapy</a></li>   
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp8 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
+                                            </ul> 
+                                        </ul>
+                                    </div>
+                                    <div class="Sub_Hvr_wrp9 Sub_cmn">
+                                        <ul class="weight_wrp hvr01">
+                                            <ul class="weight_wrp">
+                                                <li><a href="#">Body</a></li>
+                                                <li><a href="#">Face</a></li>
+                                                <li><a href="#">Neck Hump   </a></li>
+                                                <li><a href="#">Knee</a></li> 
+                                                <li><a href="#">Calf</a></li>
+                                                <li><a href="#">Get Therapy</a></li> 
+                                                <li><a href="#">VTRON CTS - Refit programme</a></li> 
+                                            </ul> 
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="list">
-                                    <h3>BODY THERAPIES / session</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Full Body Therapy</a></li>
-                                        <li><a href="#">Premium Body Therapy</a></li> 
-                                        <li><a href="#">Herbal Anti - Cellulite Therapy</a></li> 
-                                        <li><a href="#">Manual Lymphatic Drainage Therapy</a></li> 
-                                        <li><a href="#">Bone Strengthening Therapy</a></li> 
-                                    </ul> 
-                                </div>
-                                <div class="list"> 
-                                    <h3>SPOT REDUCTION THERAPY / session</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Tummy Trim Therapy</a></li>
-                                        <li><a href="#">Arm Trim Therapy</a></li> 
-                                        <li><a href="#">Hip Trim Therapy</a></li>
-                                        <li><a href="#">Thigh Trim Therapy</a></li> 
-                                        <li><a href="#">Chest Trim Therapy</a></li>
-                                        <li><a href="#">Side Trim Therapy</a></li> 
-                                        <li><a href="#">Integrative Massage Therapy</a></li> 
-                                        <li><a href="#">G-5</a></li>
-                                    </ul> 
-                                </div> 
-                                <div class="list"> 
-                                    <h3>SKIN FIRMING / session</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Body Firming / Contouring</a></li>  
-                                    </ul> 
-                                </div> 
-                                <div class="list"> 
-                                    <h3>SPECIALISED THERAPIES</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Turboslim</a></li>
-                                        <li><a href="#">Waist & Tummy Trim Treatment</a></li>
-                                        <li><a href="#">Arm Trim Treatment</a></li>
-                                        <li><a href="#">Hip Trim Treatment</a></li> 
-                                        <li><a href="#">Thigh Trim Treatment</a></li>
-                                        <li><a href="#">Get Therapy</a></li> 
-                                        <li><a href="#">Ultraslim / Ultratrim</a></li>
-                                        <li><a href="#">SlimLite / Trimlite</a></li> 
-                                    </ul> 
-                                </div> 
-                                <div class="list"> 
-                                    <h3>WELLNESS TREATMENTS</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Slimming Cum Core Muscle Strengthening Then</a></li>
-                                        <li><a href="#">Neuromuscular Therapy</a></li>
-                                        <li><a href="#">Analgesic T herapy</a></li>   
-                                    </ul> 
-                                </div> 
-                                <div class="list"> 
-                                    <h3>BIO ENEROYTHERAP</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
-                                    </ul> 
-                                </div> 
-                                <div class="list"> 
-                                    <h3>VTRON CTS TREATMENTS</h3>
-                                    <ul class="weight_wrp">
-                                        <li><a href="#">Body</a></li>
-                                        <li><a href="#">Face</a></li>
-                                        <li><a href="#">Neck Hump   </a></li>
-                                        <li><a href="#">Knee</a></li> 
-                                        <li><a href="#">Calf</a></li>
-                                        <li><a href="#">Get Therapy</a></li> 
-                                        <li><a href="#">VTRON CTS - Refit programme</a></li> 
-                                    </ul> 
-                                </div> 
-                          </div>
+                            </div>
                         </div>
                         <!-- end--here -->
                             <li class="hair-care">
@@ -150,21 +173,40 @@
                                 </a> 
                             </li>
                             <!-- drop--third -->
-                            <div class="drop_down drop3">
-                                <div class="list"><a href="#">hair transplant ( men & Women )</a></div>
-                                <div class="list"><a href="#">PRP Treatment</a></div>
-                                <div class="list"><a href="#">Scalp & hair Treatment</a></div>
-                                <div class="list"><a href="#">hair Pigmentation</a></div> 
-                            </div>
+                            <ul class="drop_down drop3">
+                                <li class="list"><a href="#">hair transplant ( men & Women )</a></li>
+                                <li class="list"><a href="#">PRP Treatment</a></li>
+                                <li class="list"><a href="#">Scalp & hair Treatment</a></li>
+                                <li class="list"><a href="#">hair Pigmentation</a></li> 
+                            </ul>
                            <!-- end--here -->
-                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
+                            <li class="Dermat">
+                                <a href="javascript:void(0)" class="hvr-underline-from-left">
                                 Dermat 
                                 <i class="fas fa-sort-down"></i>
-                            </a></li>
-                            <li><a href="javascript:void(0)" class="hvr-underline-from-left">
-                                Laser Treatment
+                            </a>
+                          </li>
+                             <!-- drop--4rth -->
+                             <ul class="drop_down drop4">
+                                <li class="list"><a href="#">Microdermabrasion</a></li>
+                                <li class="list"><a href="#">organic peel</a></li>
+                                <li class="list"><a href="#">Botox</a></li>
+                                <li class="list"><a href="#">Fillers</a></li> 
+                            </ul>
+                           <!-- end--here -->
+                            <li class="permanentMakeup"><a href="javascript:void(0)" class="hvr-underline-from-left">
+                                permanent makeup 
                                 <i class="fas fa-sort-down"></i>
                             </a></li>
+                              <!-- drop--5th -->
+                              <ul class="drop_down drop5">
+                                <li class="list"><a href="#">Pink Lips</a></li>
+                                <li class="list"><a href="#">permanent eyebrow</a></li>
+                                <li class="list"><a href="#">permanent Eyeliner</a></li>
+                                <li class="list"><a href="#">permanent lip linear</a></li> 
+                                <li class="list"><a href="#">hair bleeding</a></li> 
+                            </ul>
+                           <!-- end--here -->
                         </ul>
                     </div>
                     <div class="main-bar">
