--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                             <div class="Child_drop2">
                                 <div class="sub-drop01 sub-cmn01">
                                     <ul>
-                                        <li class="list1 list-cmn01 list-active"><a href="beauty.html#demo">weight loss</a></li>
-                                        <li class="list2 list-cmn01"><a href="beauty.html#demo2">weight gain</a></li>
-                                        <li class="list3 list-cmn01"><a href="#">BODY THERAPIES</a></li>
-                                        <li class="list4 list-cmn01"><a href="#">SPOT REDUCTION THERAPY</a></li>
-                                        <li class="list5 list-cmn01"><a href="#">SKIN FIRMING</a></li>
-                                        <li class="list6 list-cmn01"><a href="#">SPECIALISED THERAPIES</a></li>
-                                        <li class="list7 list-cmn01"><a href="#">WELLNESS TREATMENTS</a></li>
-                                        <li class="list8 list-cmn01"><a href="#">BIO ENEROYTHERAP</a></li>
-                                        <li class="list9 list-cmn01"><a href="#">VTRON CTS TREATMENTS</a></li>
+                                        <li class="list1 list-cmn01 list-active"><a href="slimming.html#Loss">weight loss</a></li>
+                                        <li class="list2 list-cmn01"><a href="slimming.html#Gain">weight gain</a></li>
+                                        <li class="list3 list-cmn01"><a href="slimming.html#Body">BODY THERAPIES</a></li>
+                                        <li class="list4 list-cmn01"><a href="slimming.html#Spot">SPOT REDUCTION THERAPY</a></li>
+                                        <li class="list5 list-cmn01"><a href="slimming.html#Skin">SKIN FIRMING</a></li>
+                                        <li class="list6 list-cmn01"><a href="slimming.html#Specialized">SPECIALISED THERAPIES</a></li>
+                                        <li class="list7 list-cmn01"><a href="slimming.html#Wellness">WELLNESS TREATMENTS</a></li>
+                                        <li class="list8 list-cmn01"><a href="slimming.html#Energy">BIO ENERGY THERAPY </a></li>
+                                        <li class="list9 list-cmn01"><a href="slimming.html#VTRON">VTRON CTS TREATMENTS</a></li>
                                     </ul>
                                 </div>
                                 <div class="sub-drop02 sub-cmn01">
@@ -188,10 +188,12 @@
                           </li>
                              <!-- drop--4rth -->
                              <ul class="drop_down drop4">
-                                <li class="list"><a href="#">Microdermabrasion</a></li>
-                                <li class="list"><a href="#">organic peel</a></li>
                                 <li class="list"><a href="#">Botox</a></li>
                                 <li class="list"><a href="#">Fillers</a></li> 
+                                <li class="list"><a href="#">Thread lift</a></li>
+                                <li class="list"><a href="#">organic peel</a></li> 
+                                <li class="list"><a href="#">Microdermabrasion</a></li> 
+                                <li class="list"><a href="#">PRP treatment (face)</a></li>
                             </ul>
                            <!-- end--here -->
                             <li class="permanentMakeup"><a href="javascript:void(0)" class="hvr-underline-from-left">
