--- a/filler.html
+++ b/filler.html
@@ -250,7 +250,7 @@
             <section class="Slim_Service Filler-Service">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2><span>Fillers</span></h2>
+                        <h2>Fillers <span> Treatment </span></h2>
                     </div>
                     <div class="Slim_content">
                         <p>
