--- a/index.html
+++ b/index.html
@@ -510,6 +510,10 @@
                                <input type="submit" value="Submit">
                             </div>
                        </div>
+                       <button class="g-recaptcha" 
+        data-sitekey="reCAPTCHA_site_key" 
+        data-callback='onSubmit' 
+        data-action='submit'>Submit</button>
                     </form>
                 </div>
             </div>
@@ -605,6 +609,23 @@
     <script src="js/vanilla-tilt.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_site_key"></script>
+    <script>
+        function onSubmit(token) {
+          document.getElementById("demo-form").submit();
+        }
+      </script>
+         <script>
+            function onClick(e) {
+              e.preventDefault();
+              grecaptcha.ready(function() {
+                grecaptcha.execute('reCAPTCHA_site_key', {action: 'submit'}).then(function(token) {
+                    // Add your logic to submit to your backend server here.
+                });
+              });
+            }
+        </script>
     <script>
         new WOW().init();
     </script>
