--- a/organic.html
+++ b/organic.html
@@ -290,15 +290,42 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment">
+            <section class="Filler-Treatment Organic_treatment">
                 <div class="container">
                     <div class="filler-heading">
                         <h2>Organic Peel  <span>BENEFITS</span></h2>
                     </div>
-                    <div class="Filler-content ">
-                        <figure>
-                            <img src="image/organic.png" alt="img">
-                        </figure>
+                    <div class="Filler-content organic-peel-content">
+                       <div class="org01 org-cmn">
+                           <h3>Before</h3>
+                           <ul>
+                               <li>Fine lines</li>
+                               <li>Pigmentation</li>
+                               <li>Sun Damage</li>
+                               <li>Acne Marks & Scars</li>
+                               <li>Uneven Skin Tone</li>
+                               <li>Clogged Pores</li>
+                               <li>Blackheads</li>
+                           </ul>
+                       </div>
+                       <div class="org02 org-cmn">
+                           <figure>
+                               <img src="image/acne.png" alt="img">
+                           </figure>
+                       </div>
+                       <div class="org03 org-cmn">
+                        <h3>after</h3>
+                        <ul>
+                            <li>Smoothness</li>
+                            <li>Balanced Tone</li>
+                            <li>Lifted Appearance</li>
+                            <li>Clearer Skin</li>
+                            <li>Radiance</li>
+                            <li>Firmer Skin</li>
+                            <li>Softness</li>
+                        </ul>
+                       </div>   
+                     
                     </div>
                 </div>
             </section>
