--- a/slimming.html
+++ b/slimming.html
@@ -1086,7 +1086,87 @@
        </div>
     </section>   
     <!-- end---here -->
-
+      <!-- BUSTTreatments-- ---11-->
+      <section class="Weight-Loss_Wrapper VTRON-Relief Commn_wrp BUSTTreatments" id="BUSTTreatments">
+        <div class="container">
+           <div class="Weight-heading W11">
+            <h2>BUST  <span> Treatments</span></h2>
+               <h3><i class="fas fa-plus"></i></h4>
+               <h4><i class="fas fa-minus"></i></h3>
+           </div>
+           <div class="Weight-Content-wrp Accro11">
+            <div class="Weight-Loss Body-Farming"> 
+                    <div class="Weight-content">
+                       <div class="W-left">
+                          <figure>
+                              <img src="image/w35.png" alt="img">
+                          </figure>
+                       </div>
+                       <div class="W-right">
+                         <h3>B-Line <span> Treatment  </span>- Bust Enhancement / Bust Reduction / Bust Firming</h3>
+                            <p>
+                                Conscious of wearing a bikini because of your smaller bust size or embarrassed by the size of your bust? Not only this, but, disproportionately large breasts can also cause neck pain, back pain, or other physical symptoms. 
+                            </p>
+                            <p>
+                                Cosset World brings to you a combination of manual massage for bust reduction along with a Firming Program which helps in tightening of tissues to avoid sagging of the breast and give and firmer uplifted breasts.
+                            </p>
+                        </div> 
+                  </div>
+             </div> 
+             <!--  -->
+             <div class="Weight-Loss Body-Farming Lipofit   "> 
+                <div class="Weight-content">
+                   <div class="W-left">
+                      <figure>
+                          <img src="image/w36.png" alt="img">
+                      </figure>
+                   </div>
+                   <div class="W-right">
+                     <h3>Morpho-<span> Bust  </span></h3>
+                        <p>
+                            Aging, Pregnancy, genetics, breastfeeding, or lack of exercise can affect your bust line, causing it to sag or lose shape. Cosset world introduces Morpho bust – a revolutionary new and advanced noninvasive treatment that firms, tones and enhances your bust line. 
+                        </p>
+                        <p>
+                            The Morphobust treatment is a scientific ‘7-stage’ routine requiring a minimum of 6 sessions, each of which lasts for a minimum of 60 minutes and involves a combination of massage techniques and specialized products that help stimulate the different layers of your bosom. The carefully administered massage techniques and specialized ‘Shape Up’ products work in tandem to the firm, strengthen the support of the breasts and increase the production of collagen and elastin.
+                        </p>
+                    </div> 
+              </div>
+         </div> 
+           </div> 
+       </div>
+    </section>   
+    <!-- end---here -->
+       <!-- FIGURE CORRECTION----12-->
+       <section class="Weight-Loss_Wrapper VTRON-Relief Commn_wrp FIGURETREATMENT" id="FIGURETREATMENT ">
+        <div class="container">
+           <div class="Weight-heading W12">
+            <h2>FIGURE CORRECTION  <span>TREATMENT </span></h2>
+               <h3><i class="fas fa-plus"></i></h4>
+               <h4><i class="fas fa-minus"></i></h3>
+           </div>
+           <div class="Weight-Content-wrp Accro12">
+            <div class="Weight-Loss Body-Farming"> 
+                    <div class="Weight-content">
+                       <div class="W-left">
+                          <figure>
+                              <img src="image/w37.png" alt="img">
+                          </figure>
+                       </div>
+                       <div class="W-right">
+                         <h3>FIGURE  <span> CORRECTION  </span></h3>
+                            <p>
+                            Not satisfied with just weight and inch loss and need something that does more? Try the COSSET WORLD Full Body Therapy, which includes both a G5 appliance and manual therapy. Our experts perform a massage with special oils on the lymphatic drainage lines. 
+                            </p>
+                            <p>
+                            This oil is absorbed in the skin and breaks down fat into fatty acids. The fatty acids are then released in the circulation and are used with weight loss appliances or with physical activities.
+                            </p>
+                        </div> 
+                  </div>
+             </div> 
+           </div> 
+       </div>
+    </section>   
+    <!-- end---here -->
 </div> 
         
    <!-- ----Enquery -->
