--- a/hairtransplant.html
+++ b/hairtransplant.html
@@ -50,10 +50,10 @@
                             </a></li>
                                  <!--drop--1st-->
                                  <ul class="drop_down drop1">
-                                    <li class="list"><a href="#">Skin Treatment</a></li>
-                                    <li class="list"><a href="#">laser Treatment</a></li>
-                                    <li class="list"><a href="#">body Treatment</a></li>
-                                    <li class="list"><a href="#">cosmodermat Treatment</a></li> 
+                                    <li class="list"><a href="skintreatment.html">Skin Treatment</a></li>
+                                    <li class="list"><a href="lasertreatment.html">laser Treatment</a></li>
+                                    <li class="list"><a href="bodytreatment.html">body Treatment</a></li>
+                                    <li class="list"><a href="cosmo.html">cosmodermat Treatment</a></li> 
                                 </ul>
                                <!-- end--here -->
                             <li class="slimming">
@@ -335,10 +335,10 @@
                                 </figure>
                              </div>
                              <div class="rgt hair-cnt01">
-                                <figure>
+                                <figure  class="grl-aftr">
                                     <img src="image/girl-after.png" alt="">
                                 </figure>
-                                <figure>
+                                <figure class="grl-bfor">
                                    <img src="image/girl-before.png" alt="">
                                </figure>
                             </div>
