--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                             </a></li>
                                  <!--drop--1st-->
                                  <ul class="drop_down drop1">
-                                    <li class="list"><a href="#">Skin Treatment</a></li>
-                                    <li class="list"><a href="#">laser Treatment</a></li>
-                                    <li class="list"><a href="#">body Treatment</a></li>
-                                    <li class="list"><a href="#">cosmodermat Treatment</a></li> 
+                                    <li class="list"><a href="skintreatment.html">Skin Treatment</a></li>
+                                    <li class="list"><a href="lasertreatment.html">laser Treatment</a></li>
+                                    <li class="list"><a href="bodytreatment.html">body Treatment</a></li>
+                                    <li class="list"><a href="cosmo.html">cosmodermat Treatment</a></li> 
                                 </ul>
                                <!-- end--here -->
                             <li class="slimming">
