--- a/index.html
+++ b/index.html
@@ -515,6 +515,14 @@
             </div>
         </section>
         <!--end---here -->
+            
+   <!-- whats--appp--sticky -->
+      <div class="wtsapp-sticky-wrp">
+        <a href="https://api.whatsapp.com/send?phone=+9625001752&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+             <i class="fab fa-whatsapp my-float"></i>
+            </a>
+      </div>
+     <!--end--here-->
         <!-- foooter-->
               <footer>
                   <div class="container">
