--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
    <!-- whats--appp--sticky -->
       <div class="wtsapp-sticky-wrp">
         <a href="https://api.whatsapp.com/send?phone=919625001862" class="float" target="_blank">
-             <i class="fab fa-whatsapp my-float"></i>
-            </a>
+             <img src="image/Whatsapp1.png" alt="img">
+        </a>
       </div>
      <!--end--here-->
         <!-- foooter-->
