--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                         <p>Follow us :-  
                         <a href="#"><i class="fab fa-facebook"></i></a> 
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="insta">
+                            <!-- <i class="fab fa-instagram"></i> -->
+                        <i> <img src="image/instagram.png" alt="img"></i>   
+                        </a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                         </p>
                     </div>
@@ -174,10 +177,10 @@
                             </li>
                             <!-- drop--third -->
                             <ul class="drop_down drop3">
-                                <li class="list"><a href="#">hair transplant ( men & Women )</a></li>
-                                <li class="list"><a href="#">PRP Treatment</a></li>
-                                <li class="list"><a href="#">Scalp & hair Treatment</a></li>
-                                <li class="list"><a href="#">hair Pigmentation</a></li> 
+                                <li class="list"><a href="hairtransplant.html">hair transplant ( men & Women )</a></li>
+                                <li class="list"><a href="prphair.html">PRP Treatment</a></li>
+                                <li class="list"><a href="scalp.html">Scalp & hair Treatment</a></li>
+                                <li class="list"><a href="hairpigment.html">hair Pigmentation</a></li> 
                             </ul>
                            <!-- end--here -->
                             <li class="Dermat">
@@ -188,12 +191,12 @@
                           </li>
                              <!-- drop--4rth -->
                              <ul class="drop_down drop4">
-                                <li class="list"><a href="#">Botox</a></li>
-                                <li class="list"><a href="#">Fillers</a></li> 
-                                <li class="list"><a href="#">Thread lift</a></li>
-                                <li class="list"><a href="#">organic peel</a></li> 
-                                <li class="list"><a href="#">Microdermabrasion</a></li> 
-                                <li class="list"><a href="#">PRP treatment (face)</a></li>
+                                <li class="list"><a href="botox.html">Botox</a></li>
+                                <li class="list"><a href="filler.html">Fillers</a></li> 
+                                <li class="list"><a href="thread.html">Thread lift</a></li>
+                                <li class="list"><a href="organic.html">organic peel</a></li> 
+                                <li class="list"><a href="microderma.html">Microdermabrasion</a></li> 
+                                <li class="list"><a href="prpface.html">PRP treatment (face)</a></li>
                             </ul>
                            <!-- end--here -->
                             <li class="permanentMakeup"><a href="javascript:void(0)" class="hvr-underline-from-left">
@@ -391,7 +394,7 @@
                         <ul>
                             <li class="Tst01 Tst_cmn02">
                                 <figure>
-                                    <img src="image/tst1.png" alt="image">
+                                    <img data-tilt data-tilt-full-page-listening src="image/tst1.png" alt="image">
                                 </figure>
                                 <p>  
                                     "Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -402,7 +405,7 @@
                             </li>
                             <li class="Tst02 Tst_cmn02">
                                 <figure>
-                                    <img src="image/tst2.png" alt="image">
+                                    <img data-tilt data-tilt-full-page-listening src="image/tst2.png" alt="image">
                                 </figure>
                                 <p>  
                                     "Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -413,7 +416,7 @@
                             </li>
                             <li class="Tst03 Tst_cmn02">
                                 <figure>
-                                    <img src="image/tst3.png" alt="image">
+                                    <img data-tilt data-tilt-full-page-listening src="image/tst3.png" alt="image">
                                 </figure>
                                 <p>  
                                     "Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -523,6 +526,12 @@
         </a>
       </div>
      <!--end--here-->
+     <div class="social-menu">
+         <a href="#" class="S1"><i class="fa fb-bg fa-facebook"></i></a>
+         <a href="#" class="S2"><i class="fa tw-bg fa-twitter"></i></a>
+         <a href="#" class="S3"><i class="fa yo-bg fa-youtube"></i></a>
+         <a href="#" class="S4"><i class="fa in-bg fa-instagram"></i></a>
+     </div>
         <!-- foooter-->
               <footer>
                   <div class="container">
@@ -540,6 +549,7 @@
                                  <li><a href = "#"class="hvr-underline-from-left" >Fillers</a></li>
                                  <li><a href = "#"class="hvr-underline-from-left" >Thread lift</a></li>
                                  <li><a href = "#"class="hvr-underline-from-left" >Tummy tucks</a></li>
+                                 <li><a href = "contact.html"class="hvr-underline-from-left" >Contact us</a></li>
                               </ul>
                           </div>
                           <div class="Ft02 Ft_cmn01">
