--- a/hairlaser.html
+++ b/hairlaser.html
@@ -308,7 +308,7 @@
                                 </figure>
                                  <div class="hair-cnt04">
                                      <figure>
-                                         <img src="image/l002.png" alt="img">
+                                         <img src="image/li002.png" alt="img">
                                      </figure>
                                  </div>
                             </div>
