--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <a href="#"><i class="fab fa-facebook"></i></a> 
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="insta">
-                            <!-- <i class="fab fa-instagram"></i> -->
-                        <i> <img src="image/instagram.png" alt="img"></i>   
+                            <i class="fab fa-instagram"></i>
+                        <!-- <i> <img src="image/instagram.png" alt="img"></i>    -->
                         </a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                         </p>
@@ -526,12 +526,27 @@
         </a>
       </div>
      <!--end--here-->
+     <!-- social--menu -->
      <div class="social-menu">
-         <a href="#" class="S1"><i class="fa fb-bg fa-facebook"></i></a>
-         <a href="#" class="S2"><i class="fa tw-bg fa-twitter"></i></a>
-         <a href="#" class="S3"><i class="fa yo-bg fa-youtube"></i></a>
-         <a href="#" class="S4"><i class="fa in-bg fa-instagram"></i></a>
+         <div class="show-social media-cmn">
+            <i class="fas fa-caret-right" title="Show social icon"></i>
+         </div>
+         <div class="Sub-social">
+         <a href="#" class="S1"><i class="fab fa-facebook-f"></i></a>
+         <a href="#" class="S2"><i class="fab fa-twitter"></i></a>
+         <a href="#" class="S3"><i class="fab fa-youtube"></i></a>
+         <a href="#" class="S4"><i class="fab fa-instagram"></i></a>
+        </div>
+         <div class="hide-social media-cmn">
+            <i class="fas fa-caret-left" title="Hide social icon"></i>
+         </div>
      </div>
+     <!-- end -->
+     <!--bottom-- to---- top -->
+     <div class="BT-top" onclick="topFunction()" title="click to top" >
+        <a href="#" type="button" role="button"> <i class="fas fa-angle-up"></i></a>
+    </div>
+
         <!-- foooter-->
               <footer>
                   <div class="container">
