--- a/index.html
+++ b/index.html
@@ -522,7 +522,8 @@
    <!-- whats--appp--sticky -->
       <div class="wtsapp-sticky-wrp">
         <a href="https://api.whatsapp.com/send?phone=919625001862" class="float" target="_blank">
-             <img src="image/Whatsapp1.png" alt="img">
+             <!-- <img src="image/Whatsapp1.png" alt="img"> -->
+             <i class="fab fa-whatsapp my-float"></i>
         </a>
       </div>
      <!--end--here-->
