--- a/index.html
+++ b/index.html
@@ -226,24 +226,30 @@
         <section class="Banner_Wrapper">
             <div class="banner-child slider1  owl-carousel">
                 <div class="banner-sub-child">
+                    <figure>
+                        <img src="image/skin.png" alt="img">
+                    </figure>
                    <div class="container">
                       <div class="Banner_Content">
                             <div class="Banner_child">
-                                <h1>No More Shaving, <br>
-                                    Waxing or Bleaching!!</h1>
+                                <h1>Slay with your glowing skin
+                                    Get the best skin treatment today.</h1>
                                     <p>Get Advanced Laser Hair Reduction at CW</p>
                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- banner2 -->
+                <!-- banner2 -  Sliming---->
                 <div class="banner-sub-child banner-sub-child2">
+                    <figure>
+                        <img src="image/slimming.png" alt="img">
+                    </figure>
                     <div class="container">
                        <div class="Banner_Content">
                              <div class="Banner_child">
-                                 <h1>No More Shaving, <br>
-                                     Waxing or Bleaching!!</h1>
+                                 <h1>Burn one then burn all, trim your body to perfect shape,
+                                    By innovative and  reliable technique</h1>
                                      <p>Get Advanced Laser Hair Reduction at CW</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
@@ -251,20 +257,57 @@
                      </div>
                  </div>
                 <!-- end--here -->
-                <!-- banner3 -->
+                <!-- banner3 ------>
                 <div class="banner-sub-child banner-sub-child3">
+                    <figure>
+                        <img src="image/hair.png" alt="img">
+                    </figure>
                     <div class="container">
                        <div class="Banner_Content">
                              <div class="Banner_child">
-                                 <h1>No More Shaving, <br>
-                                     Waxing or Bleaching!!</h1>
+                                 <h1>Take care of your hairs like never before,
+                                    Utilize the benefits of advanced PRP treatments.</h1>
                                      <p>Get Advanced Laser Hair Reduction at CW</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
                      </div>
                  </div>
-                <!-- end---here -->
+                <!-- end---here --> 
+                 <!-- banner4----Dermat-- -->
+                 <div class="banner-sub-child banner-sub-child3">
+                    <figure>
+                        <img src="image/dermat.png" alt="img">
+                    </figure>
+                    <div class="container">
+                       <div class="Banner_Content">
+                             <div class="Banner_child">
+                                 <h1>Never compromise with your looks ever again,
+                                    Get the best dermatologist with futuristic equipment.</h1>
+                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+                <!-- end---here --> 
+                 <!-- banner5----Permanent-makeup -->
+                 <div class="banner-sub-child banner-sub-child3">
+                    <figure>
+                        <img src="image/permanent-makeup.png" alt="img">
+                    </figure>
+                    <div class="container">
+                       <div class="Banner_Content">
+                             <div class="Banner_child">
+                                 <h1>Tired of makeups every day? Try permanent fixtures,
+done using precise tools and advanced procedure.</h1>
+                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+                <!-- end---here --> 
            </div>
         </section>
 
@@ -280,46 +323,46 @@
                         <div class="Grid-item1 Grid-item_cmn01" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
-                                    <h2>Beauty</h2>
+                                    <h2>Dermat</h2>
                                     <p>Be Beautiful With Our Services</p>
                                     <a href="#" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
-                                <h2>Beauty</h2>
+                                <h2>Dermat</h2>
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
                         <div class="Grid-item2 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
-                                    <h2>Beauty</h2>
+                                    <h2>Skin</h2>
                                     <p>Be Beautiful With Our Services</p>
                                     <a href="#" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
-                                <h2> Laser Treatment</h2>
+                                <h2> Skin</h2>
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
                         <div class="Grid-item3 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
-                                    <h2>Beauty</h2>
+                                    <h2>permanent   makeup</h2>
                                     <p>Be Beautiful With Our Services</p>
                                     <a href="#" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
-                                <h2>Laser Treatment Dermat</h2>
+                                <h2>permanent makeup</h2>
                                 <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
                         <div class="Grid-item4 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
-                                    <h2>Beauty</h2>
+                                    <h2>Slimming</h2>
                                     <p>Be Beautiful With Our Services</p>
                                     <a href="#" class="hvr-radial-out">View Explore</a>
                                 </div>
@@ -332,7 +375,7 @@
                         <div class="Grid-item5 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
                             <div class="grid-hvr-content">
                                 <div class="Hvr_cnt">
-                                    <h2>Beauty</h2>
+                                    <h2>Hair Care</h2>
                                     <p>Be Beautiful With Our Services</p>
                                     <a href="#" class="hvr-radial-out">View Explore</a>
                                 </div>
